
Fixed: Solaris: Subtract ZFS ARC size from the system memory usage, so monit can display memory used
by applications (ZFS ARC will return memory to the system when needed).

Fixed: Some linux versions logged "Skipping redundant host 'localhost'" warning in the case that the
/etc/hosts contained localhost entry for both "127.0.0.1" (IPv4 loopback) and "::1" (IPv6 loopback).


Version 5.18

New: The service status, summary and procmatch CLI commands are now colorized and use a
tabular format. To disable colors and display nontabular output, use a new -B command-line
option or the "set terminal batch" statement in the monit configuration file.

New: If the service has multiple errors, the service status will describe all errors (originally
monit displayed only one error)

New: Issue #340: New CLI command for services state overview added:
    monit report [up | down | initialising | unmonitored | total]
Output example:
    $ monit report
    up:            11 (39.3%)
    down:          16 (57.1%)
    initialising:   0 (0.0%)
    unmonitored:    1 (3.6%)
    total:         28 services

New: Issue #344: Added MONIT_SERVICE environment variable to a check program context.

New: A new ONREBOOT statement for service startup control on system reboot was added. The following
modes are available:
    onreboot start     ... always start the service automatically after reboot (DEFAULT mode)
    onreboot nostart   ... never start the service automatically after reboot
    onreboot laststate ... the service state is persistent across reboot (stopped before reboot => stopped after reboot and vice versa)

New: The "mode" statement options are reduced to "active" (automatic service restarts allowed
on error) and "passive" (no restart allowed on error). The "manual" option is deprecated (but
still supported for backward compatibility) and replaced by the new "onreboot laststate" statement.

New: The system status shows boot time and uptime in monit CLI and HTTP GUI.
