@@ -39,6 +39,8 @@ by applications (ZFS ARC will return memory to the system when needed).
 Fixed: Some linux versions logged "Skipping redundant host 'localhost'" warning in the case that the
 /etc/hosts contained localhost entry for both "127.0.0.1" (IPv4 loopback) and "::1" (IPv6 loopback).
 
+Fixed: Allow quoted service names in "depends on" statement.
+
 
 Version 5.18
 
